--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,7 +44,7 @@ a:visited {
     border-radius: 5px;
 }
 
-.page-header {
+.section-header {
     font-size: 40px;
     font-weight: 800;
     color: white;
@@ -64,26 +64,40 @@ a:visited {
 .card-item {
     display: flex;
     justify-content: flex-start;
+    align-items: center;
     flex: auto;
     gap: 10px;
     background-color: white;
     border-radius: 5px;
 }
 
-.card-item:hover {
-    background-color: rgb(172, 212, 207)
+.card-item-link:hover {
+    background-color: rgb(210, 230, 230)
 }
 
 .card-item img {
     border-radius: 5px;
+    height: 150px;
+    width: auto;
+    margin: 20px;
+}
+
+.site-img {
+    border: 2px solid black;
 }
 
 .card-text-content {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 15px;
+    margin: 15px 15px 15px 0;
     gap: 10px;
+}
+
+.card-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .card-title {
@@ -91,8 +105,19 @@ a:visited {
     font-size: 30px;
 }
 
+.card-disclaimer {
+    font-style: italic;
+    font-size: 16px;
+}
+
 .card-text {
     font-size: 20px;
+}
+
+.card-text .note {
+    padding-top: 10px;
+    font-size: 16px;
+    font-style: italic;
 }
 
 .card-technologies {
@@ -102,9 +127,18 @@ a:visited {
 }
 
 .card-technologies > li {
-    background-color: rgb(67, 129, 121);;
+    background-color: rgb(67, 129, 121);
     border-radius: 5px;
     color: white;
     font-weight: 700;
     padding: 2px 4px;
+}
+
+.project-feature-list {
+    display: flex;
+    flex-direction: column;
+    list-style: square;
+    padding: 10px 20px;
+    font-size: 20px;
+    gap: 5px;
 }
